On Wayland, show on active output

QCursor::pos does not work under wayland. So use active output from KWin
to determine startup screen, if not configured otherwise.

BUG: 445158